--- a/views/admin/projects-archived.ejs
+++ b/views/admin/projects-archived.ejs
@@ -33,6 +33,7 @@
                 <a href="/admin">Dashboard</a>
                 <a href="/admin/customers">Customers</a>
                 <a href="/admin/projects" class="active">Projects</a>
+                <a href="/admin/sessions">Sessions</a>
                 <a href="/profile">Profile</a>
                 <div class="user-name">👤 <%= user.name %></div>
                 <a href="/logout">🚪 Logout</a>
